# local-tuya-domoticz-tools

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-merge.yml  publish.yml  test.yml
local_tuya_domoticz_tools/: __init__.py  logger.py  types.py
local_tuya_domoticz_tools/plugin/: __init__.py  install.py  metadata.py  plugin.py  template.txt
local_tuya_domoticz_tools/units/: __init__.py  base.py  ids.py  manager.py  selector_switch.py  set_point.py  switch.py  temperature.py  value_preprocessors.py
tests/: test_logger.py
tests/plugin/: test_install.py  test_metadata.py  test_metadata.txt  test_plugin.py
tests/units/: test_base.py  test_manager.py  test_selector_switch.py  test_set_point.py  test_switch.py  test_temperature.py  value_preprocessors.py
