[tool.poetry]
name = "local_tuya_domoticz_tools"
version = "1.1.0"
description = "Tools to create a Domoticz plugin for local-tuya devices."
authors = ["Gabriel Pajot <gab@les-cactus.co>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpajot/local-tuya-domoticz-tools"
include = ["local_tuya_domoticz_tools/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8"

local-tuya = ">=2.1,<3"
concurrent-tasks = ">=1.4,<2"
xmltodict = ">=0.13,<0.14"

[tool.poetry.group.test.dependencies]
pytest = "==7.4.2"
pytest-asyncio = "==0.21.1"
pytest-mock = "==3.11.1"
ruff = "==0.0.292"
mypy = "==1.6.0"
black = "==23.9.1"
pre-commit = "==3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
