[tool.poetry]
name = "local_tuya_domoticz_tools"
version = "1.2.0"
description = "Tools to create a Domoticz plugin for local-tuya devices."
authors = ["Gabriel Pajot <gab@les-cactus.co>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpajot/local-tuya-domoticz-tools"
include = ["local_tuya_domoticz_tools/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9"

local-tuya = ">=3,<4"
concurrent-tasks = ">=1.4,<2"
xmltodict = ">=0.13,<0.15"

[tool.poetry.group.test.dependencies]
pytest = "==8.3.3"
pytest-asyncio = "==0.24.0"
pytest-mock = "==3.14.0"
ruff = "==0.7.2"
mypy = "==1.13.0"
pre-commit = "==4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
